--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-13 16:57+0300\n"
-"PO-Revision-Date: 2013-06-15 23:06+0200\n"
+"PO-Revision-Date: 2013-06-16 18:03+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -779,13 +779,13 @@ msgstr "Добавить в избранное"
 #: ../code/application/views/hb/hostel_view.php:446
 #: ../code/application/views/helpfile/pofields.php~:839
 #: ../code/application/views/helpfile/pofields.php:839
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "This property has been saved in your \"My account\" section. You can now "
 "easily book it at a later date if you wish."
 msgstr ""
-"Вы можете сохранить это свойство в список избранных в вашей учетной записи, "
-"чтобы вы могли легко забронировать его на более поздний срок, если вы хотите."
+"Вы можете сохранить это свойство в список избранных в \"Мой аккаунт\", чтобы "
+"вы могли легко забронировать его на более поздний срок, если вы хотите."
 
 #: ../code/application/views/hw/hostel_view.php:368
 #: ../code/application/views/mustache/property_list.php:87
@@ -3084,9 +3084,9 @@ msgstr ""
 #: ../code/application/views/auth/login_form.php:69
 #: ../code/application/views/helpfile/pofields.php~:831
 #: ../code/application/views/helpfile/pofields.php:831
-#, fuzzy, php-format
+#, php-format
 msgid "Existing account"
-msgstr "Создать аккаунт"
+msgstr "Существующий аккаунт"
 
 #: ../code/application/views/auth/register_form.php:91
 #: ../code/application/views/auth/login_form.php:169
@@ -3767,7 +3767,7 @@ msgstr "Загрузка..."
 
 #: ../code/application/views/restricted/user_view.php:6
 #: ../code/application/views/helpfile/pofields.php:865
-#, fuzzy, php-format
+#, php-format
 msgid "Mon Compte - Réservation Auberges De Jeunesse"
 msgstr "Ваш аккаунт "
 
@@ -3852,9 +3852,9 @@ msgstr "Удалить из любых поисков на 1 неделю"
 #: ../code/application/views/mustache/property_list.php:174
 #: ../code/application/views/helpfile/pofields.php~:852
 #: ../code/application/views/helpfile/pofields.php:852
-#, fuzzy, php-format
+#, php-format
 msgid "Safe"
-msgstr "Безопасность"
+msgstr "Безопасный"
 
 #: ../code/application/views/mustache/property_list.php:179
 #: ../code/application/views/helpfile/pofields.php~:853
@@ -3866,24 +3866,24 @@ msgstr "Очень безопасный"
 #: ../code/application/views/mustache/property_list.php:189
 #: ../code/application/views/helpfile/pofields.php~:851
 #: ../code/application/views/helpfile/pofields.php:851
-#, fuzzy, php-format
+#, php-format
 msgid "Good location"
-msgstr "Местоположение"
+msgstr "Хорошее местоположение"
 
 #: ../code/application/views/mustache/property_list.php:194
 #: ../code/application/views/helpfile/pofields.php~:850
 #: ../code/application/views/helpfile/pofields.php:850
-#, fuzzy, php-format
+#, php-format
 msgid "Great location"
-msgstr "Местоположение"
+msgstr "Отличное местоположение"
 
 #: ../code/application/views/mustache/property_list.php:208
 #: ../code/application/views/helpfile/pofields.php~:860
 #: ../code/application/views/helpfile/pofields.php:860
 #: ../code/application/views/helpfile/pofields.php:888
-#, fuzzy, php-format
+#, php-format
 msgid "Overall evaluation"
-msgstr "Мои отзывы"
+msgstr "Общая оценка"
 
 #: ../code/application/views/mustache/property_list.php:223
 #: ../code/application/views/mustache/property_list.php:237
@@ -3924,26 +3924,24 @@ msgstr "Самая низкая цена на человека за ночь в 
 #: ../code/application/views/mustache/property_list.php:253
 #: ../code/application/views/helpfile/pofields.php~:858
 #: ../code/application/views/helpfile/pofields.php:858
-#, fuzzy, php-format
+#, php-format
 msgid "Show prices"
-msgstr "Показать больше"
+msgstr "Показать цены"
 
 #: ../code/application/views/mustache/property_list.php:258
 #: ../code/application/views/helpfile/pofields.php~:859
 #: ../code/application/views/helpfile/pofields.php:859
-#, fuzzy, php-format
+#, php-format
 msgid "Hide prices"
-msgstr "Кухня для Гостей"
+msgstr "Скрыть цены"
 
 #: ../code/application/views/mustache/saved_property_item.php:11
-#, fuzzy
 msgid "Arrival:"
-msgstr "День приезда"
+msgstr "День приезда:"
 
 #: ../code/application/views/mustache/saved_property_item.php:11
-#, fuzzy
 msgid "Number of nights:"
-msgstr "Количество гостей"
+msgstr "Количество ночей:"
 
 #: ../code/application/views/mustache/saved_property_item.php:19
 #: ../code/application/views/helpfile/pofields.php~:813
@@ -3981,9 +3979,8 @@ msgstr "Остаток символов:"
 
 #: ../code/application/views/mustache/save_property_dialog.php:58
 #: ../code/application/views/mustache/save_property_dialog.php:63
-#, fuzzy
 msgid "Save Note"
-msgstr "Обновление Примечаний"
+msgstr "Сохранить Примечание"
 
 #: ../code/application/views/mustache/save_property_dialog.php:59
 #: ../code/application/views/helpfile/pofields.php~:808
@@ -5108,9 +5105,9 @@ msgstr "Фильтр по ориентирам (в пределах 2 км)"
 #: ../code/application/views/city_view.php:71
 #: ../code/application/views/helpfile/pofields.php~:845
 #: ../code/application/views/helpfile/pofields.php:845
-#, fuzzy, php-format
+#, php-format
 msgid "Show properties"
-msgstr "Показать больше"
+msgstr "Показать отели"
 
 #: ../code/application/views/city_view.php:100
 #: ../code/application/views/helpfile/pofields.php~:783
@@ -5218,9 +5215,9 @@ msgstr "Удалить Все"
 #: ../code/application/views/city_view.php:363
 #: ../code/application/views/helpfile/pofields.php~:846
 #: ../code/application/views/helpfile/pofields.php:846
-#, fuzzy, php-format
+#, php-format
 msgid "Best price"
-msgstr "Кухня для Гостей"
+msgstr "Лучшая цена"
 
 #: ../code/application/views/city_view.php:364
 #: ../code/application/views/helpfile/pofields.php~:849
@@ -5232,23 +5229,23 @@ msgstr "Лучший рейтинг"
 #: ../code/application/views/city_view.php:367
 #: ../code/application/views/helpfile/pofields.php~:848
 #: ../code/application/views/helpfile/pofields.php:848
-#, fuzzy, php-format
+#, php-format
 msgid "Safest"
 msgstr "Безопасность"
 
 #: ../code/application/views/city_view.php:368
 #: ../code/application/views/helpfile/pofields.php~:847
 #: ../code/application/views/helpfile/pofields.php:847
-#, fuzzy, php-format
+#, php-format
 msgid "Best location"
-msgstr "Местоположение"
+msgstr "Лучшее местоположение"
 
 #: ../code/application/views/city_view.php:373
 #: ../code/application/views/helpfile/pofields.php~:854
 #: ../code/application/views/helpfile/pofields.php:854
-#, fuzzy, php-format
+#, php-format
 msgid "Youth hostels only"
-msgstr "Хостел для Молодежи"
+msgstr "Только Youth hostels"
 
 #: ../code/application/views/city_view.php:377
 #: ../code/application/views/helpfile/pofields.php~:555
@@ -9391,15 +9388,15 @@ msgstr "Сохраненные любимые свойства"
 
 #: ../code/application/views/helpfile/pofields.php~:823
 #: ../code/application/views/helpfile/pofields.php:823
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d%% of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d%%) is payable upon arrival. You "
 "will find the property's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-"Сейчас вы оплачиваете только первый взнос (%d от общей суммы) для того, "
-"чтобы подтвердить вашу бронь. Остаток суммы (%d) оплачивается по прибытии. "
+"Сейчас вы оплачиваете только первый взнос (%d%% от общей суммы) для того, "
+"чтобы подтвердить вашу бронь. Остаток суммы (%d%%) оплачивается по прибытии. "
 "Контактную информацию о месте проживания (емэйл, адрес, телефон…) вы "
 "получите в письме, после того, как сделаете бронирование. "
 
@@ -9412,7 +9409,7 @@ msgstr "Укажите даты"
 
 #: ../code/application/views/helpfile/pofields.php~:832
 #: ../code/application/views/helpfile/pofields.php:832
-#, fuzzy, php-format
+#, php-format
 msgid "Create new account"
 msgstr "Создать аккаунт"
 
@@ -9447,27 +9444,27 @@ msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php~:840
 #: ../code/application/views/helpfile/pofields.php:840
-#, fuzzy, php-format
+#, php-format
 msgid "Most Popular Amenities"
-msgstr "Важные замечания "
+msgstr "Самые Популярные Услуги"
 
 #: ../code/application/views/helpfile/pofields.php~:841
 #: ../code/application/views/helpfile/pofields.php:841
-#, fuzzy, php-format
+#, php-format
 msgid "Most Popular Types"
-msgstr "Важные замечания "
+msgstr "Самые Популярные Виды"
 
 #: ../code/application/views/helpfile/pofields.php~:842
 #: ../code/application/views/helpfile/pofields.php:842
-#, fuzzy, php-format
+#, php-format
 msgid "Save"
-msgstr "Обновление Примечаний"
+msgstr "Сохранить"
 
 #: ../code/application/views/helpfile/pofields.php~:843
 #: ../code/application/views/helpfile/pofields.php:843
-#, fuzzy, php-format
+#, php-format
 msgid "Last name"
-msgstr "Имя"
+msgstr "Фамилия"
 
 #: ../code/application/views/helpfile/pofields.php~:844
 #: ../code/application/views/helpfile/pofields.php:844
@@ -9491,15 +9488,15 @@ msgstr "Новый поиск по карте"
 
 #: ../code/application/views/helpfile/pofields.php~:857
 #: ../code/application/views/helpfile/pofields.php:857
-#, fuzzy, php-format
+#, php-format
 msgid "%d Bed Female Dorm Shared Bathroom"
 msgstr "Отдельная спальня для %d человек с общей ванной комнатой"
 
 #: ../code/application/views/helpfile/pofields.php~:861
 #: ../code/application/views/helpfile/pofields.php:861
-#, fuzzy, php-format
+#, php-format
 msgid "Hostels only"
-msgstr "Хостел для Молодежи"
+msgstr "Только хостелы"
 
 #: ../code/application/views/helpfile/pofields.php:862
 #, php-format
@@ -9535,9 +9532,9 @@ msgid "I do not agree and I will select another property"
 msgstr "Я не согласен, и я выберу другой отель"
 
 #: ../code/application/views/helpfile/pofields.php:869
-#, fuzzy, php-format
+#, php-format
 msgid "Benefits of booking fee ?"
-msgstr "Бесплатное бронироние"
+msgstr "Преимущества платы за бронирование ?"
 
 #: ../code/application/views/helpfile/pofields.php:870
 #, php-format
@@ -9567,19 +9564,19 @@ msgstr ""
 "как Вы"
 
 #: ../code/application/views/helpfile/pofields.php:874
-#, fuzzy, php-format
+#, php-format
 msgid "And finally, you get the best price!"
-msgstr "Вы получили наилучшую цену!"
+msgstr "И, наконец, Вы получили наилучшую цену!"
 
 #: ../code/application/views/helpfile/pofields.php:875
-#, fuzzy, php-format
+#, php-format
 msgid "Best price guarantee"
-msgstr "Лучшая цена. Мы гарантируем."
+msgstr "Гарантия лучшей цены"
 
 #: ../code/application/views/helpfile/pofields.php:876
-#, fuzzy, php-format
+#, php-format
 msgid "Free breakfast only"
-msgstr "Бесплатный Завтрак"
+msgstr "Только бесплатный завтрак"
 
 #: ../code/application/views/helpfile/pofields.php:877
 #, php-format
@@ -9599,30 +9596,31 @@ msgid ""
 msgstr "Вы можете сравнить цены, услуги и расположение на карте до 5 отелей"
 
 #: ../code/application/views/helpfile/pofields.php:880
-#, fuzzy, php-format
+#, php-format
 msgid "Please click here to compare"
-msgstr ""
-"Пожалуйста, нажмите здесь, чтобы просмотреть подтверждение по электронной "
-"почте"
+msgstr "Пожалуйста, нажмите здесь, чтобы сравнить"
 
 #: ../code/application/views/helpfile/pofields.php:881
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to select this property"
-msgstr "Убрать данный объект"
+msgstr "Нажмите здесь, чтобы выбрать этот отель"
 
 #: ../code/application/views/helpfile/pofields.php:882
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "Lowest price for a bed in a dorm at this property for the selected dates"
-msgstr "Самая низкая цена на человека за ночь в общежитии в этом отеле: %s"
+msgstr ""
+"Самая низкая цена за кровать в общежитии в этом отеле на выбранный Вами "
+"период"
 
 #: ../code/application/views/helpfile/pofields.php:883
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "Lowest price per person in a private room at this property for the selected "
 "dates"
 msgstr ""
-"Самая низкая цена на человека за ночь в отдельной комнате этого отеля: %s"
+"Самая низкая цена за кровать в личной комнате в этом отеле на выбранный Вами "
+"период"
 
 #: ../code/application/views/helpfile/pofields.php:884
 #, php-format
@@ -9648,9 +9646,9 @@ msgstr ""
 "конкретные ориентиры, вокзалы и аэропорты"
 
 #: ../code/application/views/helpfile/pofields.php:887
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to view pricing for this property"
-msgstr "Нет комнат в наличии в данном объекте."
+msgstr "Нажмите здесь, чтобы посмотреть цены на данный вид отеля"
 
 #: ../code/application/views/property_rooms_avail.php:413
 #, php-format
@@ -10044,34 +10042,28 @@ msgid "Accept terms and conditions agreement to proceed"
 msgstr "Принять условия соглашения и продолжить "
 
 #: ../code/application/controllers/cmain.php:2440
-#, fuzzy
 msgid "Please log in"
-msgstr "Пожалуйста подождите"
+msgstr "Пожалуйста войдите в свою учетную запись"
 
 #: ../code/application/controllers/cmain.php:2477
-#, fuzzy
 msgid "Invalid property"
-msgstr "Неправильный формат"
+msgstr "Неправильный отель"
 
 #: ../code/application/controllers/cmain.php:2515
-#, fuzzy
 msgid "Property not found"
-msgstr "Номер места проживания"
+msgstr "Отель не найден"
 
 #: ../code/application/controllers/cmain.php:2524
-#, fuzzy
 msgid "Property is favorite already"
-msgstr "Добавить вариант в избранное"
+msgstr "Отель уже в избранных"
 
 #: ../code/application/controllers/cmain.php:2533
-#, fuzzy
 msgid "Invalid number of nights"
-msgstr "Неправильно указан номер телефона"
+msgstr "Неверное количество суток"
 
 #: ../code/application/controllers/cmain.php:2550
-#, fuzzy
 msgid "Invalid date"
-msgstr "Неправильный формат"
+msgstr "Неправильная дата"
 
 #: ../code/application/controllers/cmain.php:2557
 #, php-format
