--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-13 16:57+0300\n"
-"PO-Revision-Date: 2013-06-04 11:11+0200\n"
+"PO-Revision-Date: 2013-06-16 19:02+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3741,9 +3740,9 @@ msgstr "Töltés ..."
 
 #: ../code/application/views/restricted/user_view.php:6
 #: ../code/application/views/helpfile/pofields.php:865
-#, fuzzy, php-format
+#, php-format
 msgid "Mon Compte - Réservation Auberges De Jeunesse"
-msgstr "Az Ön Fiókja"
+msgstr "Saját fiók"
 
 #: ../code/application/views/restricted/user_view.php:8
 #: ../code/application/views/helpfile/pofields.php~:608
@@ -3858,9 +3857,9 @@ msgstr "Nagyszerű elhelyezkedés"
 #: ../code/application/views/helpfile/pofields.php~:860
 #: ../code/application/views/helpfile/pofields.php:860
 #: ../code/application/views/helpfile/pofields.php:888
-#, fuzzy, php-format
+#, php-format
 msgid "Overall evaluation"
-msgstr "Saját Vélemények"
+msgstr "Átfogó értékelés"
 
 #: ../code/application/views/mustache/property_list.php:223
 #: ../code/application/views/mustache/property_list.php:237
@@ -3901,16 +3900,16 @@ msgstr "Legolcsóbb egyéni szoba ár / éj / fő "
 #: ../code/application/views/mustache/property_list.php:253
 #: ../code/application/views/helpfile/pofields.php~:858
 #: ../code/application/views/helpfile/pofields.php:858
-#, fuzzy, php-format
+#, php-format
 msgid "Show prices"
-msgstr "Mutassa az ingatlanokat"
+msgstr "Árak mutatása"
 
 #: ../code/application/views/mustache/property_list.php:258
 #: ../code/application/views/helpfile/pofields.php~:859
 #: ../code/application/views/helpfile/pofields.php:859
-#, fuzzy, php-format
+#, php-format
 msgid "Hide prices"
-msgstr "Legjobb ár"
+msgstr "Árak elrejtése"
 
 #: ../code/application/views/mustache/saved_property_item.php:11
 msgid "Arrival:"
@@ -9450,9 +9449,9 @@ msgstr "Női kollégiumi lakosztály %d fő részére, közös fürdőszobával"
 
 #: ../code/application/views/helpfile/pofields.php~:861
 #: ../code/application/views/helpfile/pofields.php:861
-#, fuzzy, php-format
+#, php-format
 msgid "Hostels only"
-msgstr "Kizárólag ifjúsági szállások"
+msgstr "Kizárólag szállók"
 
 #: ../code/application/views/helpfile/pofields.php:862
 #, php-format
@@ -9460,6 +9459,8 @@ msgid ""
 "Customers can easily cancel their reservation free of charge up to %d Days "
 "before arrival. Deposits paid are non refundable."
 msgstr ""
+"A foglalások könnyen és ingyen visszamondhatóak az érkezés előtt %d nappal.  "
+"A befizetett előlegek vissza nem térítendőek."
 
 #: ../code/application/views/helpfile/pofields.php:863
 #, php-format
@@ -9467,74 +9468,77 @@ msgid ""
 "Customers can easily cancel their reservation free of charge up to 1 Day "
 "before arrival. Deposits paid are non refundable."
 msgstr ""
+"A foglalások könnyen és ingyen visszamondhatóak az érkezés előtt 1 nappal.  "
+"A befizetett előlegek vissza nem térítendőek."
 
 #: ../code/application/views/helpfile/pofields.php:866
 #, php-format
 msgid "Please read carefully"
-msgstr ""
+msgstr "Kérem, olvassa el figyelmesen"
 
 #: ../code/application/views/helpfile/pofields.php:867
 #, php-format
 msgid "I agree"
-msgstr ""
+msgstr "Egyetértek"
 
 #: ../code/application/views/helpfile/pofields.php:868
 #, php-format
 msgid "I do not agree and I will select another property"
-msgstr ""
+msgstr "Nem értek egyet, és másik ingatlant választok"
 
 #: ../code/application/views/helpfile/pofields.php:869
-#, fuzzy, php-format
+#, php-format
 msgid "Benefits of booking fee ?"
-msgstr "Díjtalan foglalás"
+msgstr "Foglalási díj előnyei ?"
 
 #: ../code/application/views/helpfile/pofields.php:870
 #, php-format
 msgid ""
 "Local customer service you can trust in your language available 24 hours a "
 "day"
-msgstr ""
+msgstr "Megbízható, az Ön nyelvén beszélő helyi, 24 órás ügyfélszolgálat"
 
 #: ../code/application/views/helpfile/pofields.php:871
 #, php-format
 msgid "Secured payment: your credit card is protected"
-msgstr ""
+msgstr "Biztonságos fizetés: az Ön hitelkártyája védve van"
 
 #: ../code/application/views/helpfile/pofields.php:872
 #, php-format
 msgid ""
 "No spam emails after you have booked and your information will stay private"
 msgstr ""
+"Foglalás után nem fog spam emaileket kapni és az adatait bizalmasan kezeljük"
 
 #: ../code/application/views/helpfile/pofields.php:873
 #, php-format
 msgid "You have access to millions of real reviews from travellers like you"
-msgstr ""
+msgstr "Hozzáférhet Önhöz hasonló utazók millióinak valós értékeléshez"
 
 #: ../code/application/views/helpfile/pofields.php:874
-#, fuzzy, php-format
+#, php-format
 msgid "And finally, you get the best price!"
-msgstr "A legjobb árat kapod"
+msgstr "És végül, a legjobb árhoz jut hozzá!"
 
 #: ../code/application/views/helpfile/pofields.php:875
-#, fuzzy, php-format
+#, php-format
 msgid "Best price guarantee"
-msgstr "A legkedvezőbb ár, garantáljuk!"
+msgstr "Garantált legjobb ár"
 
 #: ../code/application/views/helpfile/pofields.php:876
-#, fuzzy, php-format
+#, php-format
 msgid "Free breakfast only"
-msgstr "Ingyenes Reggeli"
+msgstr "Kizárólag ingyenes reggeli"
 
 #: ../code/application/views/helpfile/pofields.php:877
 #, php-format
 msgid "Click here to book"
-msgstr ""
+msgstr "A foglaláshoz kattintson ide"
 
 #: ../code/application/views/helpfile/pofields.php:878
 #, php-format
 msgid "1 million reviews"
-msgstr ""
+msgstr "1 millió értékelés"
 
 #: ../code/application/views/helpfile/pofields.php:879
 #, php-format
@@ -9542,29 +9546,35 @@ msgid ""
 "You can compare pricing, services and location on the map for up to 5 "
 "properties"
 msgstr ""
+"A térképen maximum 5 ingatlan esetében végezhet összeghasonlítást az árra, "
+"szolgáltatásokra és elhelyezésre vonatkozóan"
 
 #: ../code/application/views/helpfile/pofields.php:880
-#, fuzzy, php-format
+#, php-format
 msgid "Please click here to compare"
-msgstr "Kérem ide kattintson a visszaigazoló email megtekintéséhez"
+msgstr "Kérem, kattintson ide az összehasonlításhoz"
 
 #: ../code/application/views/helpfile/pofields.php:881
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to select this property"
-msgstr "Ez ingatlan eltávolitása"
+msgstr "Az ingatlan kiválasztásához kattintson ide"
 
 #: ../code/application/views/helpfile/pofields.php:882
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "Lowest price for a bed in a dorm at this property for the selected dates"
-msgstr "Kollégiumi szobában a legalacsonyabb ár fő / éjre vonatkozóan: %s"
+msgstr ""
+"A megadott időszakban, ifjúsági szállás egy férőhelyének legalacsonyabb ára "
+"ezen az ingatlanon"
 
 #: ../code/application/views/helpfile/pofields.php:883
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "Lowest price per person in a private room at this property for the selected "
 "dates"
-msgstr "Különálló szobában a legalacsonyabb ár fő / éjre vonatkozóan: %s"
+msgstr ""
+"A megadott időszakban, magánszállás egy férőhelyének legalacsonyabb ára ezen "
+"az ingatlanon"
 
 #: ../code/application/views/helpfile/pofields.php:884
 #, php-format
@@ -9572,11 +9582,13 @@ msgid ""
 "Click here to see pricing for each type of room and the maximum number of "
 "available beds in each room"
 msgstr ""
+"Kattintson ide a különböző típúsú szobák árának és a szobánkénti maximális "
+"szabad férőhelyek megtekintéséhez"
 
 #: ../code/application/views/helpfile/pofields.php:885
 #, php-format
 msgid "You can filter the results based on their specific districts"
-msgstr ""
+msgstr "Meghatározott körzetek szerint szűrheti az eredményeket"
 
 #: ../code/application/views/helpfile/pofields.php:886
 #, php-format
@@ -9584,11 +9596,13 @@ msgid ""
 "You can filter the results based how close there are to specific landmarks, "
 "train stations and airports"
 msgstr ""
+"Meghatározott mérföldkövekhez, vasútállomásokhoz és repterekhez való "
+"távolságuk szerint szűrheti az eredményeket"
 
 #: ../code/application/views/helpfile/pofields.php:887
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to view pricing for this property"
-msgstr "Nincs szabad szoba ebben az ingatlanban."
+msgstr "Az ingatlan árainak megtekintéséhez kattintson ide"
 
 #: ../code/application/views/property_rooms_avail.php:413
 #, php-format
@@ -9999,7 +10013,7 @@ msgid "Invalid date"
 msgstr "Érvénytelen dátum"
 
 #: ../code/application/controllers/cmain.php:2557
-#, fuzzy, php-format
+#, php-format
 msgid "Notes are exceeding maximum of %d characters"
 msgstr "A megjegyzés meghaladja a maximális %d karakter hosszúságot"
 
