--- a/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
@@ -9182,9 +9182,9 @@ msgid "The benefits"
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:890
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to see info and prices"
-msgstr "Enlever cette propriété "
+msgstr "Cliquez ici pour voir info et prix"
 
 #: ../code/application/views/helpfile/pofields.php:891
 #, php-format
