--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -8404,7 +8404,7 @@ msgstr "Les avantages"
 #: ../code/application/views/helpfile/pofields.php:890
 #, php-format
 msgid "Click here to see info and prices"
-msgstr "Cliquez ici pour sélectionner cet établissement"
+msgstr "Cliquez ici pour voir toutes les informations et prix"
 
 #: ../code/application/views/helpfile/pofields.php:891
 #, php-format
