--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-19 22:33+0300\n"
-"PO-Revision-Date: 2013-06-23 18:38-0800\n"
+"PO-Revision-Date: 2013-06-23 19:06-0800\n"
 "Last-Translator: Mc web <info@mcwebmanagement.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -2097,7 +2097,7 @@ msgstr "Precio más bajo por persona y noche en habitación compartida"
 #: ../code/application/views/helpfile/pofields.php:14
 #, php-format
 msgid "Private rooms from %s"
-msgstr "Habitaciones privadas / por persona %s"
+msgstr "Habitaciones privadas %s"
 
 #: ../code/application/views/mustache/property_list.php:266
 #: ../code/application/views/helpfile/pofields.php~:786
