PO-italian-june-26-misc-2

--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-19 22:33+0300\n"
-"PO-Revision-Date: 2013-06-26 10:08-0800\n"
+"PO-Revision-Date: 2013-06-26 11:42-0800\n"
 "Last-Translator: Mc web <info@mcwebmanagement.com>\n"
 "Language-Team: English\n"
 "Language: \n"
@@ -3152,7 +3152,7 @@ msgstr "Solo ostelli"
 #: ../code/application/views/helpfile/pofields.php:555
 #, php-format
 msgid "Only free breakfast"
-msgstr "Colazione"
+msgstr "Colazione gratuita"
 
 #: ../code/application/views/city_view.php:328
 #: ../code/application/views/helpfile/pofields.php~:604
